# Parallax_engine

./: CHANGELOG_PARALLAX_IMPROVEMENTS.md  CMakeLists.txt  CMakePresets.json  COPYRIGHT  CREDITS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  RAYTRACING_GUIDE.md  README.md  TEST_VALIDATION_REPORT.md  VR_IMPLEMENTATION_GUIDE.md  VR_REQUIREMENTS_AND_ROADMAP.md  VR_SESSION_SUMMARY.md  sonar-project.properties  vcpkg.json
.github/ISSUE_TEMPLATE/: BUG.yaml  TASK.yaml
.github/workflows/: codeql.yml
.sonarlint/: connectedMode.json
common/: Error.hpp  Exception.cpp  Exception.hpp  Logger.hpp  Path.cpp  Path.hpp  String.hpp  Timer.hpp  Timestep.hpp
common/math/: Light.cpp  Light.hpp  Matrix.cpp  Matrix.hpp  Projection.cpp  Projection.hpp  Vector.cpp  Vector.hpp
config/: default-layout.ini
docs/: RUST_PLUGIN.md
docs/game_engine/: ecs.md  renderer.md
docs/troubleshooting/: troubleshooting.md
editor/: CMakeLists.txt  main.cpp
editor/src/: ADocumentWindow.cpp  ADocumentWindow.hpp  DockingRegistry.cpp  DockingRegistry.hpp  Editor.cpp  Editor.hpp  IDocumentWindow.hpp  WindowRegistry.cpp  WindowRegistry.hpp
editor/src/DocumentWindows/: PopupManager.cpp  PopupManager.hpp  Primitive.hpp
editor/src/ImNexo/: Components.cpp  Components.hpp  Elements.cpp  Elements.hpp  Widgets.cpp
editor/src/ImParallax/: Components.cpp  Components.hpp  Elements.cpp  Elements.hpp  EntityProperties.cpp  EntityProperties.hpp  Guard.hpp  ImParallax.cpp  ImParallax.hpp  Panels.cpp  Panels.hpp  Utils.cpp  Utils.hpp  Widgets.cpp  Widgets.hpp
editor/src/backends/: ImGuiBackend.cpp  ImGuiBackend.hpp
editor/src/context/: ActionGroup.cpp  ActionGroup.hpp  ActionHistory.cpp  ActionHistory.hpp  ActionManager.cpp  ActionManager.hpp  Selector.cpp  Selector.hpp  ThumbnailCache.cpp  ThumbnailCache.hpp
editor/src/exceptions/: Exceptions.hpp
editor/src/inputs/: Command.cpp  Command.hpp  InputManager.cpp  InputManager.hpp  WindowState.cpp  WindowState.hpp
editor/src/plugins/: CAbiPluginAdapter.cpp  CAbiPluginAdapter.hpp  IPlugin.hpp  PluginAbi.hpp  PluginManager.cpp  PluginManager.hpp
editor/src/utils/: Config.cpp  Config.hpp  EditorProps.cpp  EditorProps.hpp  FileSystem.cpp  FileSystem.hpp  ScenePreview.cpp  ScenePreview.hpp  String.cpp  String.hpp  TransparentStringHash.hpp
engine/: CMakeLists.txt
engine/include/: json.hpp
engine/src/: Application.cpp  Application.hpp  CameraFactory.cpp  CameraFactory.hpp  EntityFactory3D.cpp  EntityFactory3D.hpp  LightFactory.cpp  LightFactory.hpp  Parallax.cpp  Parallax.hpp  Types.hpp  WorldState.hpp
engine/src/assets/: Asset.cpp  Asset.hpp  AssetCatalog.cpp  AssetCatalog.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetImporterBase.hpp  AssetImporterContext.cpp  AssetImporterContext.hpp  AssetImporterInput.hpp  AssetLocation.cpp  AssetLocation.hpp  AssetName.hpp  AssetPackName.hpp  AssetRef.cpp  AssetRef.hpp  FilenameValidator.hpp  ValidatedName.cpp  ValidatedName.hpp
engine/src/components/: AudioRayTracing.hpp  BillboardMesh.hpp  Camera.cpp  Camera.hpp  Editor.hpp  Light.hpp  MaterialComponent.hpp  Model.hpp  Name.hpp  Parent.hpp  PhysicsBodyComponent.hpp  RayTracing.hpp  Render.hpp  Render3D.hpp  RenderContext.hpp  SceneComponents.hpp  StaticMesh.hpp  Transform.cpp  Transform.hpp  Uuid.hpp  VR.hpp
engine/src/ecs/: Access.hpp  ComponentArray.cpp  ComponentArray.hpp  Components.cpp  Components.hpp  Coordinator.cpp  Coordinator.hpp  Definitions.hpp  ECSExceptions.hpp  Entity.cpp  Entity.hpp  Group.hpp  GroupSystem.hpp  QuerySystem.hpp  SingletonComponent.hpp  SingletonComponentMixin.hpp  System.cpp  System.hpp
engine/src/renderPasses/: ForwardPass.cpp  ForwardPass.hpp  GridPass.cpp  GridPass.hpp  MaskPass.cpp  MaskPass.hpp  Masks.hpp  OutlinePass.cpp  OutlinePass.hpp  Passes.hpp
engine/src/renderer/: Attributes.hpp  Buffer.cpp  Buffer.hpp  DrawCommand.cpp  DrawCommand.hpp  Framebuffer.cpp  Framebuffer.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderPass.hpp  RenderPipeline.cpp  RenderPipeline.hpp  Renderer.cpp  Renderer.hpp  Renderer3D.cpp  Renderer3D.hpp  RendererAPI.cpp  RendererAPI.hpp  RendererExceptions.hpp  Shader.cpp  Shader.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  ShaderStorageBuffer.cpp  ShaderStorageBuffer.hpp  SubTexture2D.cpp  SubTexture2D.hpp  Texture.cpp  Texture.hpp  UniformCache.cpp  UniformCache.hpp  VertexArray.cpp  VertexArray.hpp  Window.cpp  Window.hpp
engine/src/systems/: AudioRayTracingSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  LightSystem.cpp  LightSystem.hpp  (+15 more)
examples/: CMakeLists.txt
examples/ecs/: exampleBasic.cpp
resources/: parallax.rc
resources/shaders/: pbr_standard.glsl  toon_shading.glsl
scripts/: CMakeCPackOptions.cmake.in  COPYRIGHT.in  copyright.cmake  install.cmake  pack.cmake
scripts/linux/: deb_config.cmake  parallax-engine.desktop.in
scripts/windows/: nsis_config.cmake
tests/: CMakeLists.txt
tests/common/: Exceptions.test.cpp  Light.test.cpp  Matrix.test.cpp  Path.test.cpp  Vector.test.cpp
tests/ecs/: ComponentArray.test.cpp  Components.test.cpp  Coordinator.test.cpp  Definitions.test.cpp  Entity.test.cpp  Exceptions.test.cpp  Group.test.cpp  GroupSystem.test.cpp  QuerySystem.test.cpp  SingletonComponent.test.cpp  SparseSet.test.cpp  System.test.cpp
tests/engine/: CMakeLists.txt  test.cpp
tests/renderer/: Buffer.test.cpp  Exceptions.test.cpp  Framebuffer.test.cpp  Pipeline.test.cpp  Renderer3D.test.cpp  RendererAPI.test.cpp  Shader.test.cpp  Texture.test.cpp  VertexArray.test.cpp
tests/utils/: comparison.hpp
(+217 files in other folders)
